# data_binding_poc_vala

./: LICENSE  Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
data/: interface.ui
src/: Makefile  Makefile.am  Makefile.in  binding_contract.vala  convenience_classes.vala  interface.ui  main.vala  property_binding.vala
src/.deps/: data_binding_poc_vala-binding_contract.Po  data_binding_poc_vala-convenience_classes.Po  data_binding_poc_vala-main.Po
